removed hardcoded cultures