@@ -31,13 +31,13 @@ public enum Cultures {
 
     // TODO: add more cultures
 
-    HOBBIT_SHIRE("Hobbits of the Shire",
-            "Hobbits are an unobtrusive but very ancient people, more numerous formerly than they are today; " +
-                    "for the love peace and quiet and good tilled earth: a well-ordered and well-farmed countryside " +
-                    "was their favourite haunt.",
-            Map.of(AbilityScores.DEX,2), 0,
-            List.of(PlayerSkills.STEALTH), List.of(ItemSubcategory.PIPE), List.of(/*"Brewer's Supplies", "Carpenter's Tools", "Cartographer's Tools", "Gardener's Tools", "Potter's Tools", "Smith's Tools", "Weaver's Tools", "Woodcarver's Tools",*/ "Cook's Utensils"), Collections.emptyList(),
-            List.of(), false),
+//    HOBBIT_SHIRE("Hobbits of the Shire",
+//            "Hobbits are an unobtrusive but very ancient people, more numerous formerly than they are today; " +
+//                    "for the love peace and quiet and good tilled earth: a well-ordered and well-farmed countryside " +
+//                    "was their favourite haunt.",
+//            Map.of(AbilityScores.DEX,2), 0,
+//            List.of(PlayerSkills.STEALTH), List.of(ItemSubcategory.PIPE), List.of(/*"Brewer's Supplies", "Carpenter's Tools", "Cartographer's Tools", "Gardener's Tools", "Potter's Tools", "Smith's Tools", "Weaver's Tools", "Woodcarver's Tools",*/ "Cook's Utensils"), Collections.emptyList(),
+//            List.of(), false),
 
 //    DWARF_LONELY_MOUNTAIN("Dwarves of Erebor",
 //            "There now Dáin son of Nain took up his abode, and he became King under the Mountain, " +
@@ -47,55 +47,29 @@ public enum Cultures {
 //            List.of(), false),
 //    // And proficiency in a musical instrument?
 
-    DWARF_DURINGS_FOLK("Dwarves of Durin's Folk",
-            "Only on the Road would travellers be found, most often Dwarves, hurrying along on buisness of their own, and with no help but a few words to spare for strangers",
-            Map.of(AbilityScores.CON, 2), 1, List.of(),List.of(ItemSubcategory.AXE,ItemSubcategory.GREAT_AXE,ItemSubcategory.HAND_AXE,ItemSubcategory.PICKAXE),List.of(),
-            List.of("Dalish","Khuzdul"),List.of(),true
-    ),
-
-    ELF_MIRKWOOD("Wood Elves",
-            "In the great hall with pillars hewn out of the living stone sat the Elvenking on a chair of carven wood.",
-            Map.of(AbilityScores.DEX, 2, AbilityScores.WIS, 1), 0,
-            List.of(PlayerSkills.PERCEPTION,PlayerSkills.STEALTH), List.of(ItemSubcategory.DAGGER, ItemSubcategory.SPEAR, ItemSubcategory.SHORTSWORD, ItemSubcategory.SHORTBOW), Collections.emptyList(), List.of("Sindarin","Silvan Elvish"),
-            List.of(), false),
+//    ELF_MIRKWOOD("Wood Elves",
+//            "In the great hall with pillars hewn out of the living stone sat the Elvenking on a chair of carven wood.",
+//            Map.of(AbilityScores.DEX, 2, AbilityScores.WIS, 1), 0,
+//            List.of(PlayerSkills.PERCEPTION,PlayerSkills.STEALTH), List.of(ItemSubcategory.DAGGER, ItemSubcategory.SPEAR, ItemSubcategory.SHORTSWORD, ItemSubcategory.SHORTBOW), Collections.emptyList(), List.of("Sindarin","Silvan Elvish"),
+//            List.of(), false),
 
     // Keep
-    HUMAN_BARDINGS("Bardings",
-            "Bard had rebuilt the town in Dale and Men had gathered to him from the Lake and from South and West, " +
-                    "and the desolation was now filled with birds and blossoms in spring and fruit and feasting in autumn.",
-            Map.of(AbilityScores.STR, 1), 2, List.of(PlayerSkills.INSIGHT),
-            List.of(ItemSubcategory.LONGBOW), Collections.emptyList(), List.of("Dalish"),
-            List.of(), true),
 //    HUMAN_BEORNINGS("Beornings",
 //            "Beorn indeed became a great chief afterwards in those regions and " +
 //                    "ruled a wide land between the mountains and the wood...",
 //            Map.of(AbilityScores.STR, 1), 2, List.of(PlayerSkills.INTIMIDATION),
 //            Collections.emptyList(), Collections.emptyList(), List.of("Vale of Andiun Tongue"),
 //            List.of(), true),
-    HUMAN_DUNEDAIN("Dúnedain",
-            "In the wild lands beyond Bree, there were mysterious wanderers. " +
-                    "The Bree-folk called them Rangers, and knew nothing of their origin.",
-            Map.of(AbilityScores.STR, 1), 2, List.of(PlayerSkills.HISTORY, PlayerSkills.SURVIVAL),
-            Collections.emptyList(), Collections.emptyList(), List.of("Sindarin"),
-            List.of(), true),
-    HUMAN_BREE("Humans of Bree",
-            "According to their own tales.. they were the descendants of the first Men that ever wandered into the West " +
-                    "of the middle-world. Few had survived the turmoils of the Elder days; but when the Kings returned again over " +
-                    "the Great Sea they had found the Bree-men still there, " +
-                    "and they were still there now, when the memory of the old Kings had faded into the grass.",
-            Map.of(AbilityScores.WIS, 1), 2, List.of(PlayerSkills.PERCEPTION),
-            Collections.emptyList(), Collections.emptyList(), Collections.emptyList(),
-            List.of(), true),
-    HUMAN_LAKETOWN("Humans of Laketown", "They had been wealthy and powerful, and there had been fleets of boats on the waters.",
-            Map.of(AbilityScores.CHA, 1), 2, List.of(PlayerSkills.PERSUASION),
-            Collections.emptyList(), Collections.emptyList(), List.of("Dalish"),
-            List.of(), true),
-    HUMAN_MINAS_TIRITH("Humans of Minas Tirith",
-            "O Gondor, Gondor! Shall Men behold the Silver Tree, " +
-                    "or West Wind blow again between the Mountains and the Sea?",
-            Map.of(AbilityScores.INT, 1), 2, List.of(PlayerSkills.HISTORY),
-            Collections.emptyList(), Collections.emptyList(), List.of("Sindarin"),
-            List.of(), true),
+//    HUMAN_LAKETOWN("Humans of Laketown", "They had been wealthy and powerful, and there had been fleets of boats on the waters.",
+//            Map.of(AbilityScores.CHA, 1), 2, List.of(PlayerSkills.PERSUASION),
+//            Collections.emptyList(), Collections.emptyList(), List.of("Dalish"),
+//            List.of(), true),
+//    HUMAN_MINAS_TIRITH("Humans of Minas Tirith",
+//            "O Gondor, Gondor! Shall Men behold the Silver Tree, " +
+//                    "or West Wind blow again between the Mountains and the Sea?",
+//            Map.of(AbilityScores.INT, 1), 2, List.of(PlayerSkills.HISTORY),
+//            Collections.emptyList(), Collections.emptyList(), List.of("Sindarin"),
+//            List.of(), true),
 //    HUMAN_ROHAN("Riders of Rohan",
 //            "Where now is the horse and the rider? Where is the horn that was blowing? " +
 //                    "Where is the helm and the hauberk, and the bright hair flowing?",
